--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -13,12 +13,12 @@
 
     <style type="text/css">
         body {
-            background: #0C1021;
+            background: #8fccff;
         }
 
         .right-last {
             position: absolute;
-            right: -100px;
+            right: -140px;
             top: 2%;
         }
 
@@ -26,39 +26,36 @@
 </head>
 
 <body>
-<nav th:fragment="menu(n)" id="back-top" class="ui inverted m_shadow_small attached segment m_padded_tb_mini">
+<nav th:fragment="menu(n)" id="back-top"  class="ui headAndFoot headFoot inverted m_shadow_small attached segment m_padded_tb_mini">
     <!--创建一个容器-->
     <div class="ui container">
         <!--创建次级菜单-->
-        <div class="ui stackable menu inverted secondary">
+        <div class="ui  stackable menu secondary">
             <!--创建蓝绿色的头项-->
-            <h2 class="ui header item m_t_color_name">Caelum_Blog</h2>
+            <h3 class="ui item m_t_color_name">Caelum_Blog</h3>
             <!--创建普通项-->
-            <a class="m_item m_mobile_hide item" th:classappend="${n==1} ? 'active'" th:href="@{/}"><i
+            <a class="m_item m_mobile_hide item" th:classappend="${n==1} ? 'active m_t_color_name'" th:href="@{/}"><i
                     class="small home icon"></i>首页</a>
-            <a class="m_item m_mobile_hide item" th:classappend="${n==2} ? 'active'" th:href="@{/types/-1}"><i
+            <a class="m_item m_mobile_hide item" th:classappend="${n==2} ? 'active m_t_color_name'" th:href="@{/types/-1}"><i
                     class="small idea icon"></i>分类</a>
-            <a class="m_item m_mobile_hide item" th:classappend="${n==3} ? 'active'" th:href="@{/tags/-1}"><i
+            <a class="m_item m_mobile_hide item" th:classappend="${n==3} ? 'active m_t_color_name'" th:href="@{/tags/-1}"><i
                     class="small tags icon"></i>标签</a>
-            <a class="m_item m_mobile_hide item" th:classappend="${n==4} ? 'active'" th:href="@{/archives}"><i
+            <a class="m_item m_mobile_hide item" th:classappend="${n==4} ? 'active m_t_color_name'" th:href="@{/archives}"><i
                     class="small clone icon"></i>归档</a>
-            <a class="m_item m_mobile_hide item" th:classappend="${n==5} ? 'active'" th:href="@{/friendlyLink}"><i
-                    class="small music  icon"></i>友情链接</a>
-            <a class="m_item m_mobile_hide item" th:classappend="${n==6} ? 'active'" th:href="@{/message}"> <i
+            <a class="m_item m_mobile_hide item" th:classappend="${n==5} ? 'active m_t_color_name'" th:href="@{/message}"> <i
                     class="small archive icon"></i>留言板</a>
             <a class="m_item m_mobile_hide item close-light"><i class="small lightbulb outline icon"></i>关灯</a>
 
             <!--创建右边项-->
-            <div class="item">
+            <div class="item ">
                 <form th:action="@{/search}" method="post" name="search" target="_blank">
                     <!--创建搜索，透明显示-->
-                    <div class="m_mobile_hide ui icon transparent inverted input">
+                    <div class="m_mobile_hide ui icon transparent  input">
                         <input name="query" type="text" th:value="${query}" placeholder="搜索……">
                         <!--在内加入搜索图标-->
                         <i onclick="document.forms['search'].submit()" class="search link icon"></i>
                     </div>
                 </form>
-                <form id="success" th:action="@{/admin/blogs}"></form>
 
                 <div class="right-last m-item m-mobile-hide menu">
                     <div th:if="${session.user} != null" class="ui right-last  dropdown  item">
@@ -73,9 +70,9 @@
                             <a th:href="@{/admin/logout}" class="item">注销</a>
                         </div>
                     </div>
-                    <div class="ui right-last stackable menu inverted secondary" th:if="${session.user} == null">
-                        <a onclick="loginShow()" class="m_mobile_hide item">登陆</a>
-                        <a onclick="registerShow()" class="m_mobile_hide item">注册</a>
+                    <div class="ui right-last stackable menu  secondary" th:if="${session.user} == null">
+                        <a onclick="loginShow()" class="m_mobile_hide black item">登陆</a>
+                        <a onclick="registerShow()" class="m_mobile_hide black item">注册</a>
                     </div>
                 </div>
             </div>
@@ -89,8 +86,16 @@
 
 
 <div th:fragment="tools">
-    <div id="loginModal" class="ui tiny modal">
+    <div id="prompt" class="ui mini modal">
         <i class="close icon"></i>
+        <div class="header">注册链接已发送至您的邮箱，请前往并完成注册</div>
+    </div>
+    <div id="prompt2" class="ui mini modal">
+        <i class="close icon"></i>
+        <div class="header">邮箱已被注册！</div>
+    </div>
+    <div id="loginModal" class="ui tiny modal">
+        <i id="logClose" class="close icon"></i>
         <div class="ui container">
             <br>
             <div class="header ui grid">
@@ -107,9 +112,12 @@
 
         <div class="image  content">
             <div class="ui grid">
+
                 <div class="ui seven wide column medium image">
                     <img th:src="@{/images/cat.gif}" width="250px">
+                    <span id="error" style="text-align: center;color: red"></span>
                 </div>
+
                 <div class="ui one wide column"></div>
                 <div class="ui eight wide column form">
                     <br>
@@ -119,11 +127,11 @@
                         <i id="checkEmail" class=""></i>
                     </div>
                     <div style="width: 100%" class="field  ui icon input">
-                        <input type="text" name="password" placeholder="密码(6-16位英文数字混合）">
+                        <input type="password" name="password" placeholder="密码(6-16位英文数字混合）">
                         <i id="checkPassword" class=""></i>
                     </div>
                     <div class="field">
-                        <button class="ui button m_padded_small violet basic" id="loginBtn">登陆</button>
+                        <button class="ui button m_padded_small m_t_color_name basic" id="loginBtn">登陆</button>
                     </div>
                 </div>
             </div>
@@ -153,53 +161,10 @@
 </div>
 
 
-<footer th:fragment="footer"  class="ui  inverted segment m_opacity_mini m_padded_small">
+<footer th:fragment="footer"  class="ui headFoot headAndFoot segment m_opacity_mini m_padded_small">
     <!--创建容器 所有元素居中-->
     <div class="ui center aligned container">
-    <!--    &lt;!&ndash;将容器布局，分为16份，在每个div间加入竖线&ndash;&gt;
-        <div class="ui inverted divided stackable grid">
-            &lt;!&ndash;三份的列宽&ndash;&gt;
-            <div class="three wide column">
-                &lt;!&ndash;插入  圆角  图片&ndash;&gt;
-                <div class="ui inverted link list">
-                    <div class="item">
-                        <img class="ui rounded image" style="width: 110px" alt="图片走丢了QWQ。"
-                             th:src="@{/images/wechat.png}">
-                    </div>
-                </div>
-            </div>
-            <div class="three wide column">
-                <div class="ui inverted link list">
-                    <h4 class="ui inverted header">每日一题</h4><br>
-                    <p class="item ">是先有鸡还是先有蛋？</p>
-                    <button id="answer" class="ui mini m_t_color_bottom m_t_bc_color_bottom   circular button">查看答案
-                    </button>
-                    <div class="ui checkAnswer flowing popup  transition hidden">
-                        这是一个哲学的问题，按照正常定义指可以孵出鸡来的蛋也不一定就是先有蛋，根据表观遗传学生物可能在出生时为其它物种，但在后面进化为某种物种（具有遗传性）。
-                    </div>
-                </div>
-            </div>
-            <div class="three wide column">
-                <div class="ui inverted link list">
-                    <h4 class="inverted header ui">联系我</h4><br>
-                    <p class="item m_opacity_mini" th:text="#{index.qq}"></p>
-                    <p class="item m_opacity_mini" th:text="#{index.wx}"></p>
-
-                </div>
-            </div>
-            <div class="seven wide column">
-                <div class="ui inverted link list">
-                    <h4 class="inverted header ui">博客简介</h4><br>
-                    <p class="m_opacity_mini item">博客命名为Cealum，此单词有天空、月光之意。希望大家都能在这</p>
-                    <p class="m_opacity_mini item">偌大的互联网中找到属于自己安静的一隅。</p>
-                </div>
-            </div>
-        </div>
-        &lt;!&ndash;在页面底部增加一条横线&ndash;&gt;
-        <div class="ui inverted section divider"></div>-->
-        <!--加入底部版权说明-->
         <hr style="background-color:black; height:1px; border:none;">
-
         <p class=" m_black ">公安备案号：鲁ICP备2021002005号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="wechat icon"></i>q17664198871&nbsp;&nbsp;&nbsp;&nbsp; <i class="mail icon "></i>1185538241@qq.com</p>
         <hr style="background-color:black; height:1px; border:none;">
     </div>
@@ -228,8 +193,11 @@
         //email校验
         var emailReg = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/;
 
+        //昵称校验
+        var nicknameReg = /^.{2,8}$/;
+
         //注册时输入昵称
-        var regDiv = "<input type='text' name='nickname' placeholder='昵称'>" +
+        var regDiv = "<input type='text' name='nickname' placeholder='昵称(2-8个字符)'>" +
             " <i class='' id='checkNickname'></i>";
 
         var check = " x icon";
@@ -245,7 +213,7 @@
 
         function registerShow() {
             console.log("注册")
-            $('.ui.modal')
+            $('#loginModal')
                 .modal('show');
             regis();
         }
@@ -268,9 +236,30 @@
         }
 
         $("#loginBtn").click(function () {
-
             if ($("#loginBtn").html() === "注册") {
-                alert("敬请期待");
+                if (psdReg.test($("[name='password']").val()) && emailReg.test($("[name='email']").val())&& nicknameReg.test($("[name='nickname']").val())) {
+                    $("#logClose").click();
+                    $.ajax({
+                        url: "/blog/register",
+                        data: {
+                            email: $("[name='email']").val(),
+                            nickname: $("[name='nickname']").val(),
+                            password: $("[name='password']").val()
+                        },
+                        dateType: "json",
+                        type: "post",
+                        success: function (user) {
+                            if(user.email === undefined){
+                                $("#prompt").modal('show');
+                            }else{
+                                $("#prompt2").modal('show');
+                            }
+                        }
+                    })
+                } else {
+                    console.log("校验失败");
+                    $("#error").text("提示：输入格式有误");
+                }
             } else {
                 if (psdReg.test($("[name='password']").val()) && emailReg.test($("[name='email']").val())) {
                     $.ajax({
@@ -284,13 +273,15 @@
                         success: function (resp) {
                             if (resp.nickname === undefined) {
                                 console.log("失败");
+                                $("#error").text("提示：账号或密码有误");
                             } else {
-                                $("#success").submit();
+                                window.location.reload();
                             }
                         }
                     })
                 } else {
                     console.log("校验失败");
+                    $("#error").text("提示：输入格式有误");
                 }
             }
         })
