--- a/src/main/resources/templates/adminHtml/types.html
+++ b/src/main/resources/templates/adminHtml/types.html
@@ -34,7 +34,7 @@
                 <td th:text="${iterStat.count}">1</td>
                 <td th:id="${type.id}" th:utext="${type.name}">笔记</td>
                 <td>
-                    <a class="ui mini teal basic button" th:id="${type.id} + 'update'">编辑</a>
+                    <a class="ui mini blue basic button" th:id="${type.id} + 'update'">编辑</a>
                     <a class=" ui mini red basic button" th:id="${type.id} + 'delete'">删除</a>
                 </td>
             </tr>
@@ -52,7 +52,7 @@
                             </div>
                             <input id="inp" type="text" style="width: 230px;float:right" name="name"
                                    placeholder="分类名称">
-                            <button class="ui submit violet basic button m_margin_right_min right floated">新增</button>
+                            <button class="ui submit blue basic button m_margin_right_min right floated">新增</button>
                             <br><br>
                             <div class="ui error message"></div>
                         </div>
@@ -84,9 +84,9 @@
 <!--/*/<th:block th:replace="_fragments :: script">/*/-->
 <!--/*/</th:block>/*/-->
 <script th:inline="javascript" type="text/javascript">
-    $(".teal.button").click(function () {
+    $(".blue.button").click(function () {
         var user =/*[[${session.user}]]*/;
-        if(user.type == 1){
+        if(user.type == "会员"){
             var id = parseInt(this.id);
             var content = $("#" + id).text();
             $("#" + id).html("<div class='ui input focus'>" +
@@ -124,7 +124,7 @@
     $(".red.button").click(function () {
         var user =/*[[${session.user}]]*/;
 
-        if(user.type == 1 ){
+        if(user.type == "会员"){
         var id = parseInt(this.id);
         $.ajax({
             url: "delete",
@@ -133,7 +133,7 @@
             },
             type: "post",
             dateType: "json",
-            success: function (resp) {
+            success: function () {
                 window.location.reload()
             }
         })}
