--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -27,10 +27,10 @@
         <!--第二行-->
         <div class="ui  ct attached segment ">
             <div th:each="type : ${types}" class="ui labeled button m_margin_tb">
-                <a th:href="@{/types/{id}(id=${type.id})}" th:classappend="${type.id==activeTypeId} ? 'violet'"
-                   th:text="${type.name}" class="ui cc  basic button">学习笔记</a>
-                <div th:text="${type.count}" th:classappend="${type.id==activeTypeId} ? 'violet'"
-                     class="ui  cc left pointing basic label">280
+                <a th:href="@{/types/{id}(id=${type.id})}" th:classappend="${type.id==activeTypeId} ? 'm_t_bc_color_name'"
+                   th:text="${type.name}" class="ui cc  button">学习笔记</a>
+                <div th:text="${type.count}" th:classappend="${type.id==activeTypeId} ? 'm_t_bc_color_name'"
+                     class="ui  cc left pointing  label">280
                 </div>
             </div>
         </div>
@@ -59,9 +59,9 @@
                                         <img th:src="@{${blog.user.avatar}}" alt="图片走丢了QWQ。"
                                              class="ui avatar image">
                                         <!--作者名-->
-                                        <div class="content"><a href="#" th:text="${blog.user.nickname}"
-                                                                class=" header">作者名</a>
-                                        </div>
+                                        <span class="ui mini basic m_t_color_name  label m_padded_mini">博主</span>
+                                        <span th:text="${blog.user.nickname}">作者名</span>
+
                                     </div>
                                     <div class=" c item">
                                         <i class="calendar alternate outline icon"></i><span
@@ -76,7 +76,7 @@
                             <div class="right aligned five wide column">
                                 <!--设置蓝色透明标签-->
                                 <a th:text="${blog.type.name}" th:href="@{/types/{id}(id=${blog.type.id})}"
-                                   class="ui m_padded_mini m_text_thin basic violet label">励志</a>
+                                   class="ui m_padded_mini m_text_thin basic m_t_color_name label">励志</a>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
     </div>
 </div>
 <div th:replace="_fragments :: tools"></div>
-<br/><br/><br/>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m_opacity_mini m_padded_tb_big">
 </footer>
 <!--/*/<th:block th:replace="_fragments :: script">/*/-->
@@ -151,16 +151,19 @@
             $(".plcon").addClass("m_t_bc_color_gd");
             $(".cc,.c").removeClass("basic");
             $(".cc,.c1").addClass("m_t_color_white");
-
+            $(".headFoot").addClass("dark");
+            $(".headFoot").removeClass("headAndFoot");
             $(".closeLight").addClass("m_t_color_theme");
         } else {
             cl.html(flag);
             $(".c").removeClass("m_t_color_white");
             $(".ct").removeClass("inverted");
             $(".closeLight").removeClass("m_t_color_theme");
-            $(".c,.c1").removeClass("m_t_color_white");
-            $(".c,.cc").addClass("basic");
+            $(".c,.c1,.cc").removeClass("m_t_color_white");
+            $(".c").addClass("basic");
             $(".plcon").removeClass("m_t_bc_color_gd");
+            $(".headFoot").removeClass("dark");
+            $(".headFoot").addClass("headAndFoot");
         }
     });
 
